feat: add order events, service-account auth and map version
